--- a/index.html
+++ b/index.html
@@ -144,11 +144,22 @@
                     </div>
                 </article>
                 <article class="proyec">
-                    <h3>Academia de artes marciales</h3>
-                    <img class="imgProyecto" src="./img/logos/Java-logo.jpg"  alt="">
-                    <a href="https://github.com/rosalFernando/"><img class="imgRepo" src="./img/github.svg" alt="repositorio"></a>
+                    <h3>Trabajando con PHP</h3>
+                    <img class="imgProyecto" src="./img/logos/php-logo.png"  alt="">
+                    <a href="https://github.com/rosalFernando/RepasoDWES"><img class="imgRepo" src="./img/github.svg" alt="repositorio"></a>
                     <div class="tecnoProyect">
-                        <img class="imgRepo" src="./img/logos/Java-logo.jpg" alt="Flutter">
+                        <img class="imgRepo" src="./img/logos/php-logo.png" alt="PHP">
+                    </div>
+                </article>
+                <article class="proyec">
+                    <h3>Entorno cliente (JavaScript)</h3>
+                    <img class="imgProyecto" src="./img/logos/js-logo.png"  alt="">
+                    <a href="https://github.com/rosalFernando/RepasoDWES"><img class="imgRepo" src="./img/github.svg" alt="repositorio"></a>
+                    <div class="tecnoProyect">
+                        <img class="imgRepo" src="./img/logos/js-logo.png" alt="JS">
+                        <img class="imgRepo" src="./img/logos/jQuery-logo.png" alt="jquery">
+                        <img class="imgRepo" src="./img/logos/html-logo.png" alt="html">
+                        <img class="imgRepo" src="./img/logos/css-logo.png" alt="css">
                     </div>
                 </article>
             </div>
